--- a/client/src/components/body/product/product.css
+++ b/client/src/components/body/product/product.css
@@ -28,11 +28,12 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-evenly;
+  width: 75%;
 }
 
 .Product .ProductImg {
-  max-width: 360px;
-  max-height: 273px;
+  width: calc(100% * (1 / 3) - 10px - 1px);
+  height: 273px;
   object-fit: cover;
   border-radius: 10px;
   margin-bottom: 2rem;
