--- a/client/src/components/body/product/product.css
+++ b/client/src/components/body/product/product.css
@@ -32,7 +32,7 @@
 }
 
 .Product .ProductImg {
-  width: calc(100% * (1 / 3) - 10px - 1px);
+  width: 350px;
   height: 273px;
   object-fit: cover;
   border-radius: 10px;
