--- a/client/src/components/body/about/about.css
+++ b/client/src/components/body/about/about.css
@@ -2,9 +2,9 @@
   /* position: absolute;
   top: 0;
   left: 0; */
-  /* padding: 25rem 0; */
+  padding: 5rem 0;
   /* margin-top: 8vh; */
-  height: 100vh;
+  /* height: 100vh; */
   background-image: url("../../../img/1.jpg");
   background-color: rgba(255, 255, 255, 0.7);
   background-blend-mode: lighten;
@@ -19,10 +19,14 @@
 
 .About .Content {
   position: relative;
-  width: 50%;
+  width: 75%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: white;
+  padding: 2rem;
+  border-radius: 10px;
+  box-shadow: 0 1rem 3rem;
 }
 
 .About .Content h1 {
