--- a/client/src/components/body/product/product.css
+++ b/client/src/components/body/product/product.css
@@ -1,5 +1,6 @@
 .Product {
-  height: 150vh;
+  /* height: 160vh; */
+  padding: 5rem 0;
   /* background-image: url("../../../img/3.jpg");
   background-color: rgba(0, 0, 0, 0.2);
   background-blend-mode: lighten;
@@ -16,7 +17,6 @@
 }
 
 .Product .ProductContainer h1 {
-  margin-top: 5rem;
   letter-spacing: 5px;
   font-weight: 600;
 }
@@ -28,7 +28,7 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-evenly;
-  width: 75%;
+  width: 90%;
 }
 
 .Product .ProductImg {
@@ -37,4 +37,5 @@
   object-fit: cover;
   border-radius: 10px;
   margin-bottom: 2rem;
+  box-shadow: 0 1rem 3rem;
 }
