--- a/client/src/components/body/services/services.css
+++ b/client/src/components/body/services/services.css
@@ -1,3 +1,18 @@
 .Services {
-  height: 100vh;
+  padding: 5rem 0;
+  background-image: url("../../../img/3.jpg");
+  background-color: rgba(255, 255, 255, 0.7);
+  background-blend-mode: lighten;
+  background-size: cover;
+  z-index: -1;
+  /* opacity: 0.25; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.Services h1 {
+  letter-spacing: 5px;
+  font-weight: 600;
 }
