--- a/client/src/components/body/services/service/service.css
+++ b/client/src/components/body/services/service/service.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  flex-wrap: wrap;
   align-items: center;
   width: 100%;
 }
@@ -9,6 +10,7 @@
 .Service .CardContainer {
   perspective: 150rem;
   -moz-perspective: 150rem;
+  margin-top: 4rem;
 }
 
 .Service .CardContainer:hover .Card,
@@ -38,15 +40,21 @@
   left: 0;
   border-radius: 10px;
   box-shadow: 0 1.5rem 4rem;
+  display: flex;
+  background-color: rgba(0, 0, 0, 0.6);
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  padding: 2rem 2rem;
+  text-align: center;
 }
 
 .CardFront {
-  background-color: red;
   z-index: 2;
   transform: rotateY(0deg);
 }
 
 .CardBack {
-  background-color: green;
   transform: rotateY(180deg);
 }
